examples/demos/documentviewer/app/mainwindow.cpp
@@ -84,9 +84,15 @@ bool MainWindow::openFile(const QString &fileName)
     }
 
     ui->actionPrint->setEnabled(m_viewer->hasContent());
-    connect(m_viewer, &AbstractViewer::printingEnabledChanged, ui->actionPrint, &QAction::setEnabled);
-    connect(ui->actionPrint, &QAction::triggered, m_viewer, &AbstractViewer::print);
-    connect(m_viewer, &AbstractViewer::showMessage, statusBar(), &QStatusBar::showMessage);
+    for (const QMetaObject::Connection &connection : m_viewerConnections)
+        disconnect(connection);
+
+    m_viewerConnections = {
+        connect(m_viewer, &AbstractViewer::printingEnabledChanged, ui->actionPrint,
+                &QAction::setEnabled),
+        connect(ui->actionPrint, &QAction::triggered, m_viewer, &AbstractViewer::print),
+        connect(m_viewer, &AbstractViewer::showMessage, statusBar(), &QStatusBar::showMessage)
+    };
 
     m_viewer->initViewer(ui->actionBack, ui->actionForward, ui->menuHelp->menuAction(), ui->tabWidget);
     restoreViewerSettings();
